examples/test/testpolicy4895.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4895
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key42: value46
      key46: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value26
          key36: value45
          key44: value42
      podSelector:
        matchLabels:
          key43: value18
          key5: value40
          key26: value1
